rtmpsink: Do not crash when receiving buffers after GST_FLOW_ERROR

If the RTMP URI is invalid, the rtmpsink will return GST_FLOW_ERROR.
If it still receives buffers after that, it shouldn't crash.

https://bugzilla.gnome.org/show_bug.cgi?id=750104